--- a/AutoLayout/AutoLayout/Base.lproj/Main.storyboard
+++ b/AutoLayout/AutoLayout/Base.lproj/Main.storyboard
@@ -16,13 +16,18 @@
                         <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="01.png" translatesAutoresizingMaskIntoConstraints="NO" id="ulq-ws-Dqx">
-                                <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="01.png" translatesAutoresizingMaskIntoConstraints="NO" id="ulq-ws-Dqx">
+                                <rect key="frame" x="16" y="44" width="358" height="766"/>
                             </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="ulq-ws-Dqx" secondAttribute="trailing" constant="16" id="0g9-9p-wGM"/>
+                            <constraint firstItem="ulq-ws-Dqx" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="7bk-SK-TaD"/>
+                            <constraint firstItem="ulq-ws-Dqx" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="C5x-5d-gU1"/>
+                            <constraint firstItem="ulq-ws-Dqx" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="JaF-om-WGb"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
