--- a/AutoLayout/AutoLayout/Base.lproj/Main.storyboard
+++ b/AutoLayout/AutoLayout/Base.lproj/Main.storyboard
@@ -17,15 +17,15 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="01.png" translatesAutoresizingMaskIntoConstraints="NO" id="ulq-ws-Dqx">
-                                <rect key="frame" x="16" y="44" width="358" height="766"/>
+                                <rect key="frame" x="16" y="44" width="358" height="780"/>
                             </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="ulq-ws-Dqx" secondAttribute="trailing" constant="16" id="0g9-9p-wGM"/>
-                            <constraint firstItem="ulq-ws-Dqx" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="7bk-SK-TaD"/>
-                            <constraint firstItem="ulq-ws-Dqx" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="C5x-5d-gU1"/>
+                            <constraint firstItem="ulq-ws-Dqx" firstAttribute="bottom" secondItem="8bC-Xf-vdC" secondAttribute="bottom" constant="-20" id="7bk-SK-TaD"/>
+                            <constraint firstItem="ulq-ws-Dqx" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" constant="44" id="C5x-5d-gU1"/>
                             <constraint firstItem="ulq-ws-Dqx" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="JaF-om-WGb"/>
                         </constraints>
                     </view>
